[tool.poetry]
name = "echo \"# packageuser 1\" >> readme-md"
version = "0.1.1"
description = ""
authors = ["jwkang96 <jiwon961212@hanmail.net>"]
readme = "README.md"
packages = [{include = "echo \"# packageuser 1\" >> readme"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
